kubernetes/argocd-ingress/argocd_ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: argocd
    namespace: argocd
    labels:
      app: argocd
    annotations:
      alb.ingress.kubernetes.io/backend-protocol: HTTPS
      # Use this annotation (which must match a service name) to route traffic to HTTP2 backends.
      alb.ingress.kubernetes.io/conditions.argogrpc: |
        [{"field":"http-header","httpHeaderConfig":{"httpHeaderName": "Content-Type", "values":["application/grpc"]}}]
      alb.ingress.kubernetes.io/scheme: "internet-facing"
      alb.ingress.kubernetes.io/target-type: "ip"
      alb.ingress.kubernetes.io/load-balancer-name: "kodiko-alb"
      alb.ingress.kubernetes.io/group.name: "kodiko-main"
      alb.ingress.kubernetes.io/group.order: '2'
      alb.ingress.kubernetes.io/ssl-redirect: '443'
      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
      alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:303578645961:certificate/a6f5b204-c359-483a-8bb7-94a7aaabada4
  spec:
    ingressClassName: alb
    rules:
      - host: argocd.kodiko.xyz
        http:
          paths:
            - pathType: Prefix
              path: /
              backend:
                service:
                  name: argogrpc
                  port:
                    number: 443
            - pathType: Prefix
              path: /
              backend:
                service:
                  name: argocd-server
                  port:
                    number: 443
    # tls:
    # - hosts:
    #   - argocd.kodiko.xyz
